Closed Bug 911428 Opened 12 years ago Closed 12 years ago

Fix -Wunused-variable warning in rdf/datasource/src/nsFileSystemDataSource.cpp

Categories

(Core Graveyard :: RDF, defect)

x86
macOS
defect
Not set
normal

Tracking

(firefox25 wontfix, firefox26 fixed)

RESOLVED FIXED
mozilla26
Tracking Status
firefox25 --- wontfix
firefox26 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

In the member function FileSystemDataSource::GetVolumeList(), nsresult rv is only used #ifdef XP_WIN or XP_OS2: https://hg.mozilla.org/mozilla-central/file/4ba8dda1ee31/rdf/datasource/src/nsFileSystemDataSource.cpp#l846 rdf/datasource/src/nsFileSystemDataSource.cpp:846:14 [-Wunused-variable] unused variable 'rv'
Attachment #798137 - Flags: review?(benjamin)
Attachment #798137 - Flags: review?(benjamin) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: