Bug 911428 - Fix -Wunused-variable warning in rdf/datasource/src/nsFileSystemDataSource.cpp. r=bsmedberg